--- a/animation.css
+++ b/animation.css
@@ -17,7 +17,7 @@ body {
 
 main
 {
-	overflow-x: hidden;
+	overflow: hidden;
 	position: relative;
 }
 
@@ -818,7 +818,8 @@ header .logo_img {
 .stories-sec
 {
 	margin-top:100px;
-	padding-bottom: 230px;
+	padding-bottom: 100px;
+
 }
 
 .stories-sec .title-sec
@@ -1005,7 +1006,7 @@ button
 }
 #bg-12
 {
-	bottom: -147px;
+	bottom: -308px;;
 	right: calc(50vw - 50px - 600px);
 }
 
@@ -1033,6 +1034,26 @@ button
 
 }
 
+
+
+.contact-us 
+{
+	text-align: center;
+}
+
+.contact-us .icons
+{
+	display: flex;
+	justify-content: center;
+}
+
+.contact-us .icons img
+{
+	width: 50px;
+	margin:0 40px;
+}
+
+
 /* FOOTER  */
 
 footer 
@@ -1043,18 +1064,20 @@ footer
 	align-items: center;
 	padding: 36px;
 	margin-bottom: 34px;
-	background-color: #000;
-
+	background-color: #060607;
+	bottom: 20px;
 }
 
-footer >div 
-{
-	display: flex;
-	justify-content: center;
-}
+
+
 footer img 
 {
-	margin: 0 5px;
+	margin-right: 10px;
+}
+
+footer .icons img
+{
+	width:30px;
 }
 
 footer p
@@ -1064,7 +1087,10 @@ footer p
 	margin-top:10px;
 	letter-spacing: 0.12em;
 	margin-bottom: 0;
+	font-size: 12px;
 }
+
+
 
 @media(max-width:876px)
 {
@@ -1205,6 +1231,23 @@ footer p
 		top: 235px;
 	}
 
+	.contact-us .icons {
+		display: flex;
+		justify-content: space-between;
+	}
+
+	.contact-us .icons img 
+	{
+		margin: 0;
+		width: 40px;
+	}
+
+	#bg-12
+	{
+		right: calc(50vw - 179px - 600px);
+		transform: scale(.7);
+	}
+
 }
 
 @media(max-width:400px)
@@ -1227,3 +1270,4 @@ footer p
 	transition: transform 0.4s ease-in-out,
 				opacity 0.4s ease-in-out;
 }
+
