--- a/animation.css
+++ b/animation.css
@@ -131,13 +131,19 @@ header .logo_img {
     height: 20.15px;
     background-image: url('logo.svg');
 	margin-right: 17px;
+	margin-bottom: -0.15em;
 
 }
 
 .logo_text {
+	display: inline-block;
 
-    font-size: 30px;
+	font-size: 27px;
     color: #fff;
+    margin: 0;
+    font-weight: 500;
+	letter-spacing: .1em;
+	
 }
 
 .title-main, .title-sec {
